--- a/src/main/resources/templates/book-add.html
+++ b/src/main/resources/templates/book-add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>Добавление книги</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
@@ -14,7 +14,8 @@
         <input type="text" name="title" placeholder="Введите название книги" class="form-control"><br>
         <input type="text" name="author" placeholder="Введите имя автора" class="form-control"><br>
         <input type="text" name="publication_year" placeholder="Введите год публикации книги" class="form-control"><br>
-        <input type="text" name="isbn" placeholder="Введите Международный стандартный книжный номер" class="form-control"><br>
+        <input type="text" name="isbn" placeholder="Введите Международный стандартный книжный номер"
+               class="form-control"><br>
         <button type="submit" class="btn btn-success">Добавить книгу</button>
     </form>
 </div>
