--- a/src/main/resources/templates/book-details.html
+++ b/src/main/resources/templates/book-details.html
@@ -9,11 +9,15 @@
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container mt-5">
-    <h1>Книги в наличии</h1>
-    <div th:each="el : ${books}" class="alert alert-info mt-2">
+    <div th:each="el : ${book}" class="alert alert-info mt-2">
         <h3 th:text="${el.title}"/>
+        <p th:text="${el.author}"/>
         <p th:text="${el.publication_year}"/>
-        <a th:href="'/book/' + ${el.id}" class="btn bnt-warning">Детальнее</a>
+        <p th:text="${el.isbn}"/>
+        <a th:href="'/book/' + ${el.id} + '/edit'" class="btn bnt-warning">Редактировать</a>
+        <form th:action="'/book/' + ${el.id} + '/remove'" method="post">
+            <button class="btn bnt-warning" type="submit">Удалить</button>
+        </form>
     </div>
 </div>
 
