1.Написал все оставшиеся контроллеры и репозитории 2.HTML странички для добавления,редактирования и просмотра пользователей

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -7,6 +7,8 @@
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Главная</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/book">Библиотека</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/book/add">Добавить книгу</a>
+            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/user">Пользователи</a>
+            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/user/add">Добавить пользователя</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">Про нас</a>
         </nav>
     </div>
