--- a/src/main/resources/templates/book-main.html
+++ b/src/main/resources/templates/book-main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>Книги</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
@@ -13,7 +13,7 @@
     <div th:each="el : ${books}" class="alert alert-info mt-2">
         <h3 th:text="${el.title}"/>
         <p th:text="${el.publication_year}"/>
-        <a th:href="'/book/' + ${el.id}" class="btn bnt-warning">Детальнее</a>
+        <a th:href="'/book/' + ${el.id}" class="btn btn-warning">Детальнее</a>
     </div>
 </div>
 
