--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,14 +1,14 @@
 <div th:fragment="header">
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-            <span class="fs-4">Библиотека</span>
+            <span class="fs-4">Главная</span>
         </a>
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Главная</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/book">Библиотека</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/book/add">Добавить книгу</a>
+            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/bookCopy">Экземпляры книг</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/user">Пользователи</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/user/add">Добавить пользователя</a>
+            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/bookLoan">Аренда</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">Про нас</a>
         </nav>
     </div>
