--- a/src/main/resources/templates/book-details.html
+++ b/src/main/resources/templates/book-details.html
@@ -16,7 +16,7 @@
         <p th:text="${el.isbn}"/>
         <a th:href="'/book/' + ${el.id} + '/edit'" class="btn bnt-warning">Редактировать</a>
         <form th:action="'/book/' + ${el.id} + '/remove'" method="post">
-            <button class="btn bnt-warning" type="submit">Удалить</button>
+            <button class="btn btn-warning" type="submit">Удалить</button>
         </form>
     </div>
 </div>
