странички для жанров и details для аренды

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -9,6 +9,7 @@
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/bookCopy">Экземпляры книг</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/user">Пользователи</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/bookLoan">Аренда</a>
+            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/genre">Жанры</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">Про нас</a>
         </nav>
     </div>
