--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,14 +1,16 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Getting Started: Serving Web Content</title>
+  <title>Библиотека: Добро пожаловать</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-5">
-  <h1 th:text="${title}"></h1>
+  <h1 th:text="${title}">Добро пожаловать в библиотеку</h1>
+  <p>Добро пожаловать на сайт нашей библиотеки! Здесь вы можете арендовать книги, следить за своими арендами и многое другое.</p>
+  <p>Не забудьте посмотреть наше разнообразие книг и насладиться чтением!</p>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
