--- a/src/main/resources/templates/bookLoan-details.html
+++ b/src/main/resources/templates/bookLoan-details.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Подробности аренды книги</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
+<header th:insert="blocks/header :: header"></header>
 
+<div class="container mt-5">
+    <div th:each="loan : ${bookLoan}" class="alert alert-info mt-2">
+        <h3 th:text="${loan.bookCopy.book.title}"/>
+        <p th:text="${'Пользователь: ' + loan.user.name}"/>
+        <p th:text="${'Начало аренды: ' + loan.startDate}"/>
+        <p th:text="${'Окончание аренды: ' + loan.endDate}"/>
+        <form th:action="'/bookLoan/' + ${loan.loanId} + '/return'" method="post">
+            <button class="btn btn-warning" type="submit">Вернуть книгу</button>
+        </form>
+    </div>
+</div>
+
+<div th:insert="blocks/footer :: footer"></div>
 </body>
 </html>
